// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contractActions getContractDetails 1`] = `
Array [
  Object {
    "payload": Object {
      "contractAddress": "0x000...",
      "contractCurrentPrice": undefined,
      "contractDuration": 7,
      "contractGain": NaN,
      "contractMultiplier": 1,
      "contractStartPrice": 1,
      "oracleAddress": undefined,
    },
    "type": "SET_CONTRACT_DETAILS",
  },
]
`;

exports[`contractActions getContractDetails error 1`] = `
Array [
  Object {
    "payload": "error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getContractDetails with no start price 1`] = `
Array [
  Object {
    "payload": Object {
      "contractAddress": "0x000...",
      "contractCurrentPrice": 0,
      "contractDuration": 7,
      "contractGain": 0,
      "contractMultiplier": 1,
      "contractStartPrice": 0,
      "oracleAddress": undefined,
    },
    "type": "SET_CONTRACT_DETAILS",
  },
]
`;

exports[`contractActions getContractOpenDates 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "SET_CONTRACT_OPEN_DATES",
  },
]
`;

exports[`contractActions getContractOpenDates error 1`] = `
Array [
  Object {
    "payload": "Contract Open Dates: error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getContractOpenDates filters by date 1`] = `
Array [
  Object {
    "payload": Object {
      "1514757600": "12/31/2017",
    },
    "type": "SET_CONTRACT_OPEN_DATES",
  },
]
`;

exports[`contractActions getOrderBook 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook error 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": "Order Book: error",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getOrderBook filters by date 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [
      Object {
        "address": "0x000...",
        "contractGain": NaN,
        "creatorAddress": "10",
        "date": "12/31/2017",
        "orderId": "1",
        "price": "0.00200",
        "quantity": "30",
        "symbol": "ETH/USD",
        "tokenType": "Long",
      },
    ],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook no orders 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook no start price 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [
      Object {
        "address": "0x000...",
        "contractGain": 0,
        "creatorAddress": "10",
        "date": "12/31/2017",
        "orderId": "1",
        "price": "0.00200",
        "quantity": "30",
        "symbol": "ETH/USD",
        "tokenType": "Long",
      },
    ],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook no token date 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook short token type 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [
      Object {
        "address": "0x000...",
        "contractGain": NaN,
        "creatorAddress": "10",
        "date": "12/31/2017",
        "orderId": "1",
        "price": "0.00200",
        "quantity": "30",
        "symbol": "ETH/USD",
        "tokenType": "Short",
      },
    ],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook silent 1`] = `
Array [
  Object {
    "payload": Array [],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getOrderBook sorts orders 1`] = `
Array [
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [
      Object {
        "address": "0x000...",
        "contractGain": NaN,
        "creatorAddress": "10",
        "date": "12/31/2017",
        "orderId": "1",
        "price": "0.00200",
        "quantity": "30",
        "symbol": "ETH/USD",
        "tokenType": "Long",
      },
      Object {
        "address": "0x000...",
        "contractGain": NaN,
        "creatorAddress": "10",
        "date": "12/31/2017",
        "orderId": "2",
        "price": "0.00200",
        "quantity": "30",
        "symbol": "ETH/USD",
        "tokenType": "Long",
      },
    ],
    "type": "SET_ORDERBOOK",
  },
  Object {
    "payload": "SET_ORDERBOOK",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades error 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": "Recent Trades: Cannot read property 'get' of undefined",
    "type": "SET_FETCHING_ERROR",
  },
]
`;

exports[`contractActions getRecentTrades no events 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
  Object {
    "payload": Array [],
    "type": "SET_RECENT_TRADES",
  },
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "REMOVE_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades silent 1`] = `Array []`;

exports[`contractActions getRecentTrades with default provider data 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
]
`;

exports[`contractActions getRecentTrades with short token 1`] = `
Array [
  Object {
    "payload": "SET_RECENT_TRADES",
    "type": "SET_FETCH_IN_PROGRESS",
  },
]
`;
